added paris to html and css

--- a/css/app.css
+++ b/css/app.css
@@ -61,8 +61,12 @@ h2 {
 
 #florida {
     background-color: #03a944;
-}
+}   
 
 #paris {
     background-color: #d32f2f;
+}
+
+#scotland {
+    background-color: #388e3c;
 }
